--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react-dom": "^16.9.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.0",
+    "react-app-polyfill": "^1.0.6",
     "react-dom": "^17.0.0",
     "react-scripts": "3.4.4",
     "typescript": "~3.7.2"
