--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "react": "^17.0.0",
     "react-app-polyfill": "^1.0.6",
     "react-dom": "^17.0.0",
+    "react-redux": "^7.2.1",
     "react-scripts": "3.4.4",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
     "typescript": "~3.7.2"
   },
   "scripts": {
