--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "react-template-ts",
-  "version": "0.1.0",
+  "version": "0.1.1",
+  "keywords": ["template", "react", "typescript"],
+  "repository": "https://github.com/Julio-Vasquez/react-template-ts.git",
+  "homepage": "https://github.com/Julio-Vasquez/react-template-ts",
+  "author": "Julio Vásquez <jualvalitube@gmail.com>",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -8,19 +12,20 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "node-sass": "^4.14.1",
-    "react": "^17.0.0",
-    "react-app-polyfill": "^1.0.6",
-    "react-dom": "^17.0.0",
-    "react-redux": "^7.2.1",
-    "react-scripts": "3.4.4",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "@types/redux-logger": "^3.0.8",
+    "react": "^17.0.1",
+    "react-app-polyfill": "^2.0.0",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-scripts": "^4.0.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-logger": "^3.0.6",
+    "redux-logger": "^4.0.0",
     "redux-saga": "^1.1.3",
-    "typescript": "~3.7.2"
+    "sass": "^1.32.5",
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
