--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
   "name": "react-template-ts",
   "version": "0.1.1",
-  "keywords": ["template", "react", "typescript"],
+  "keywords": [
+    "template",
+    "react",
+    "typescript"
+  ],
   "repository": "https://github.com/Julio-Vasquez/react-template-ts.git",
   "homepage": "https://github.com/Julio-Vasquez/react-template-ts",
   "author": "Julio Vásquez <jualvalitube@gmail.com>",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^12.6.2",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^12.19.15",
+    "@types/react": "^16.14.2",
+    "@types/react-dom": "^16.9.10",
     "@types/redux-logger": "^3.0.8",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
     "react-dom": "^17.0.1",
@@ -25,7 +30,8 @@
     "redux-logger": "^4.0.0",
     "redux-saga": "^1.1.3",
     "sass": "^1.32.5",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,7 +40,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
