--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "author": "Julio Vásquez <jualvalitube@gmail.com>",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.4.0",
+    "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.19.15",
+    "@types/reach__router": "^1.3.7",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "@types/redux-logger": "^3.0.8",
+    "antd": "^4.11.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
