feat(views): private and public

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "React App ",
+  "short_name": "React App : Template",
   "name": "React App - Template TypeScript",
   "description": "Template react app with typescript",
   "icons": [
