--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/reach__router": "^1.3.7",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "@types/react-redux": "^7.1.16",
     "@types/redux-logger": "^3.0.8",
     "antd": "^4.11.2",
     "prop-types": "^15.7.2",
@@ -59,8 +60,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react-redux": "^7.1.16"
   }
 }
