--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
     "react-dom": "^17.0.1",
+    "react-helmet-async": "^1.0.9",
     "react-redux": "^7.2.2",
     "react-scripts": "^4.0.1",
     "redux-logger": "^4.0.0",
