--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
-  "name": "op-cp-web",
-  "private": true,
-  "version": "0.0.0",
+  "name": "react-template-ts",
+  "version": "0.1.2",
+  "keywords": [
+    "template",
+    "react",
+    "typescript"
+  ],
+  "repository": "https://github.com/Julio-Vasquez/react-template-ts.git",
+  "homepage": "https://github.com/Julio-Vasquez/react-template-ts",
+  "author": "Julio Vásquez <jualvalitube@gmail.com>",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vite test",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
@@ -19,15 +28,17 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-highlight-words": "^0.18.0",
-    "react-i18next": "^11.18.6",
+    "react-i18next": "^12.1.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
     "react-tiny-fab": "^4.0.4",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.2.1",
-    "sass": "^1.55.0"
+    "redux-saga": "^1.2.2",
+    "sass": "^1.56.2"
   },
   "devDependencies": {
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.4",
     "@types/jwt-decode": "^3.1.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
@@ -36,7 +47,14 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/redux-logger": "^3.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "@vitest/coverage-c8": "^0.25.6",
+    "happy-dom": "^8.1.0",
+    "standard": "^17.0.0",
     "typescript": "^4.9.4",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vitest": "^0.25.6"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/standard/eslintrc.json"
   }
 }
