--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "standard": "^17.0.0",
     "typescript": "^4.9.4",
     "vite": "^4.0.0",
+    "vite-plugin-rewrite-all": "^1.0.1",
     "vitest": "^0.25.6"
   },
   "eslintConfig": {
