--- a/package.json
+++ b/package.json
@@ -1,62 +1,71 @@
 {
-  "name": "react-template-ts",
-  "version": "0.1.2",
-  "keywords": [
-    "template",
-    "react",
-    "typescript"
-  ],
-  "license": "MIT",
-  "repository": "https://github.com/Julio-Vasquez/react-template-ts.git",
-  "homepage": "https://github.com/Julio-Vasquez/react-template-ts",
-  "author": "Julio Vásquez <jualvalitube@gmail.com>",
-  "scripts": {
-    "start": "npx http-server ./dist",
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "test": "vite test",
-    "coverage": "vitest run --coverage"
-  },
-  "dependencies": {
-    "@ant-design/icons": "^4.8.0",
-    "@reduxjs/toolkit": "^1.9.1",
-    "antd": "^5.0.5",
-    "i18next": "^22.1.5",
-    "i18next-browser-languagedetector": "^7.0.1",
-    "jwt-decode": "^3.1.2",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-helmet-async": "^1.3.0",
-    "react-highlight-words": "^0.18.0",
-    "react-i18next": "^12.1.1",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.4.5",
-    "react-tiny-fab": "^4.0.4",
-    "redux-logger": "^3.0.6",
-    "redux-saga": "^1.2.2",
-    "sass": "^1.56.2"
-  },
-  "devDependencies": {
-    "@testing-library/react": "^13.4.0",
-    "@types/jest": "^29.2.4",
-    "@types/jwt-decode": "^3.1.0",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@types/react-highlight-words": "^0.16.4",
-    "@types/react-redux": "^7.1.24",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/redux-logger": "^3.0.9",
-    "@vitejs/plugin-react": "^3.0.0",
-    "@vitest/coverage-c8": "^0.25.6",
-    "happy-dom": "^8.1.0",
-    "standard": "^17.0.0",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.0",
-    "vitest": "^0.25.6"
-  },
-  "eslintConfig": {
-    "extends": "./node_modules/standard/eslintrc.json"
-  }
+    "name": "react-template-ts",
+    "version": "0.1.2",
+    "keywords": [
+        "template",
+        "react",
+        "typescript"
+    ],
+    "license": "MIT",
+    "repository": "https://github.com/Julio-Vasquez/react-template-ts.git",
+    "homepage": "https://github.com/Julio-Vasquez/react-template-ts",
+    "author": "Julio Vásquez <jualvalitube@gmail.com>",
+    "scripts": {
+        "start": "npx http-server ./dist",
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview",
+        "test": "vite test",
+        "lint": "ts-standard",
+        "coverage": "vitest run --coverage"
+    },
+    "dependencies": {
+        "@ant-design/icons": "^4.8.0",
+        "@reduxjs/toolkit": "^1.9.1",
+        "antd": "^5.0.5",
+        "i18next": "^22.1.5",
+        "i18next-browser-languagedetector": "^7.0.1",
+        "jwt-decode": "^3.1.2",
+        "prop-types": "^15.8.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-helmet-async": "^1.3.0",
+        "react-highlight-words": "^0.18.0",
+        "react-i18next": "^12.1.1",
+        "react-redux": "^8.0.5",
+        "react-router-dom": "^6.4.5",
+        "react-tiny-fab": "^4.0.4",
+        "redux-logger": "^3.0.6",
+        "redux-saga": "^1.2.2",
+        "sass": "^1.56.2"
+    },
+    "devDependencies": {
+        "@testing-library/react": "^13.4.0",
+        "@types/jest": "^29.2.4",
+        "@types/jwt-decode": "^3.1.0",
+        "@types/react": "^18.0.26",
+        "@types/react-dom": "^18.0.9",
+        "@types/react-highlight-words": "^0.16.4",
+        "@types/react-redux": "^7.1.24",
+        "@types/react-router-dom": "^5.3.3",
+        "@types/redux-logger": "^3.0.9",
+        "@typescript-eslint/eslint-plugin": "^5.60.0",
+        "@vitejs/plugin-react": "^3.0.0",
+        "@vitejs/plugin-react-swc": "^3.3.2",
+        "@vitest/coverage-c8": "^0.25.6",
+        "eslint": "^8.43.0",
+        "eslint-config-standard-with-typescript": "^35.0.0",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-n": "^16.0.0",
+        "eslint-plugin-promise": "^6.1.1",
+        "eslint-plugin-react": "^7.32.2",
+        "happy-dom": "^8.1.0",
+        "standard": "^17.0.0",
+        "typescript": "^4.9.4",
+        "vite": "^4.0.0",
+        "vitest": "^0.25.6"
+    },
+    "eslintConfig": {
+        "extends": "./node_modules/standard/eslintrc.json"
+    }
 }
