feat(eslint): init genera configuration

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,7 +4,8 @@
   "jsxBracketSameLine": false,
   "semi": false,
   "singleQuote": true,
-  "tabWidth": 4,
+  "tabWidth": 2,
   "printWidth": 85,
-  "jsxSingleQuote": true
+  "jsxSingleQuote": true,
+  "trailingComma": "none"
 }
